# swift-corelibs-xctest

./: .gitignore  .pep8  CMakeLists.txt  Dockerfile  Info.plist  LICENSE  Package.swift  README.md  build_script.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Documentation/: Linux.md
Sources/XCTest/: ArgumentParser.swift  CMakeLists.txt  ObjectWrapper.swift  PerformanceMeter.swift  PrintObserver.swift  TestFiltering.swift  TestListing.swift  WallClockTimeMetric.swift  XCAbstractTest.swift  XCNotificationExpectationHandler.swift  XCTAssert.swift  XCTestCase.swift  XCTestCaseProvider.swift  XCTestCaseRun.swift  XCTestCaseSuite.swift  XCTestErrors.swift  XCTestExpectation.swift  XCTestInternalObservation.swift  XCTestMain.swift  XCTestObservation.swift  XCTestObservationCenter.swift  XCTestRun.swift  XCTestSuite.swift  XCTestSuiteRun.swift  XCTimeUtilities.swift  XCWaitCompletionHandler.swift
Sources/XCTest/Private/: ArgumentParser.swift  DispatchShims.swift  IgnoredErrors.swift  JSONObserver.swift  PerformanceMeter.swift  PrintObserver.swift  TestFiltering.swift  TestListing.swift  WaiterManager.swift  WallClockTimeMetric.swift  XCPredicateExpectation.swift  XCTestCase.TearDownBlocksState.swift  XCTestCaseSuite.swift  XCTestInternalObservation.swift
Sources/XCTest/Private/Interop/: InteropHandler.swift  InteropRecord.swift
Sources/XCTest/Public/: XCAbstractTest.swift  XCNotificationExpectationHandler.swift  XCPredicateExpectationHandler.swift  XCTAssert.swift  XCTExpectedFailure.swift  XCTIssue.swift  XCTSkip.swift  XCTestCase+Asynchronous.swift  XCTestCase+Performance.swift  XCTestCase.TearDownBlocksState.swift  XCTestCase.swift  XCTestCaseRun.swift  XCTestErrors.swift  XCTestMain.swift  XCTestObservation.swift  XCTestObservationCenter.swift  XCTestRun.swift  XCTestSuite.swift  XCTestSuiteRun.swift
Sources/XCTest/Public/Asynchronous/: XCNotificationExpectationHandler.swift  XCPredicateExpectationHandler.swift  XCTNSNotificationExpectation.swift  XCTNSPredicateExpectation.swift  XCTWaiter+Validation.swift  XCTWaiter.swift  XCTestCase+Asynchronous.swift  XCTestCase+NotificationExpectation.swift  XCTestCase+PredicateExpectation.swift  XCTestExpectation.swift  XCWaitCompletionHandler.swift
Tests/: lit.cfg  test.py
Tests/Fixtures/Sources/SingleFailingTestCase/: main.swift
Tests/Functional/: lit.cfg
Tests/Functional/ArgumentParser/: main.swift
Tests/Functional/ArgumentParserWithIgnoredArgs/: main.swift
Tests/Functional/Asynchronous/Expectations/: main.swift
Tests/Functional/Asynchronous/Expectations/Cleanup/: main.swift
Tests/Functional/Asynchronous/Expectations/FulfillmentTracking/: main.swift
Tests/Functional/Asynchronous/ExpectationsWithConcurrency/: main.swift
Tests/Functional/Asynchronous/Handler/: main.swift
Tests/Functional/Asynchronous/Misuse/: main.swift
Tests/Functional/Asynchronous/NonsendingFulfillment/: main.swift
Tests/Functional/Asynchronous/Notifications/Expectations/: main.swift
Tests/Functional/Asynchronous/Notifications/Handler/: main.swift
Tests/Functional/Asynchronous/Predicates/Expectations/: main.swift
Tests/Functional/Asynchronous/Predicates/Handler/: main.swift
Tests/Functional/Asynchronous/Use/: lit.local.cfg  main.swift
Tests/Functional/ContinueAfterFailureTestCase/: main.swift
Tests/Functional/DetachedTaskLostFailure/: main.swift
Tests/Functional/EqualityWithAccuracy/: main.swift
Tests/Functional/ErrorHandling/: main.swift
Tests/Functional/FailingTestSuite/: main.swift
Tests/Functional/FailureMessagesTestCase/: main.swift
Tests/Functional/InfinityAccuracyTestCase/: main.swift
Tests/Functional/InteropModeNone/: main.swift
Tests/Functional/InteropSWTInXCTest/: main.swift
Tests/Functional/InteropWithSWT/: main.swift
Tests/Functional/InteropXCTestInSWT/: main.swift
Tests/Functional/JSONEventStream/: main.swift
Tests/Functional/ListTests/: main.swift  verify_json.expected
Tests/Functional/NegativeAccuracyTestCase/: main.swift
Tests/Functional/Observation/: main.swift
Tests/Functional/Observation/All/: main.swift
Tests/Functional/Observation/MultipleObservers/: main.swift
Tests/Functional/Observation/Selected/: main.swift
Tests/Functional/Performance/: main.swift
Tests/Functional/Performance/Misuse/: main.swift
Tests/Functional/SelectedTest/: main.swift
Tests/Functional/SingleFailingTestCase/: main.swift
Tests/Functional/SkippingTestCase/: main.swift
Tests/Functional/Sources/SingleFailingTestCase/: main.swift
Tests/Functional/TestCaseLifecycle/: main.swift
Tests/Functional/TestCaseLifecycle/Misuse/: main.swift
Tests/Functional/xctest_checker/: README.md  main.swift  setup.py  xctest_checker.py
Tests/Functional/xctest_checker/tests/: test_compare.py
Tests/Functional/xctest_checker/xctest_checker/: compare.py  error.py  line.py  main.py
Tests/Unit/: TestAssertions.swift  main.swift
Tests/Unit/Resources/: Info.plist
XCTest/: XCTAssert.swift  XCTest.swift  XCTestCase.swift  XCTestCaseProvider.swift  XCTestMain.swift  XCTimeUtilities.swift
XCTest.xcodeproj/: project.pbxproj
XCTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XCTest.xcodeproj/xcshareddata/xcschemes/: SwiftXCTest.xcscheme  SwiftXCTestFunctionalTests.xcscheme  SwiftXCTestUnitTests.xcscheme
XCTest.xcworkspace/: contents.xcworkspacedata
cmake/modules/: CMakeLists.txt  Findswiftc.cmake  PlatformInfo.cmake  SwiftSupport.cmake  Utility.cmake  XCTestConfig.cmake.in
